downloads: update download page URLs
Since the download pages now live in `/downloads`, update the existing
links to save an extra redirect.

--- a/content/downloads/_index.html
+++ b/content/downloads/_index.html
@@ -14,15 +14,15 @@ aliases:
         <table class="binaries">
           <tr>
             <td>
-              <a href="{{< relurl "download/mac" >}}" class="icon mac">macOS</a>
+              <a href="{{< relurl "downloads/mac" >}}" class="icon mac">macOS</a>
             </td>
             <td>
-              <a href="{{< relurl "download/win" >}}" class="icon windows">Windows</a>
+              <a href="{{< relurl "downloads/win" >}}" class="icon windows">Windows</a>
             </td>
           </tr>
           <tr>
             <td>
-              <a href="{{< relurl "download/linux" >}}" class="icon linux">Linux/Unix</a>
+              <a href="{{< relurl "downloads/linux" >}}" class="icon linux">Linux/Unix</a>
             </td>
           </tr>
         </table>
