book: update it
Updated via the `update-book.yml` GitHub workflow.

--- a/external/book/content/book/it/v2/_index.html
+++ b/external/book/content/book/it/v2/_index.html
@@ -9,6 +9,8 @@ book:
   front_page: true
   repository_url: https://github.com/progit/progit2-it
   sha: '08e643e3d7391c7f503a9de7965bf5579fb9f727'
+  ebook_pdf: https://github.com/progit/progit2-it/releases/download/2.1.4/progit.pdf
+  ebook_epub: https://github.com/progit/progit2-it/releases/download/2.1.4/progit.epub
 page_title: Git - Book
 url: "/book/it/v2.html"
 aliases:
