book: update zh
Updated via the `update-book.yml` GitHub workflow.

--- a/external/book/content/book/zh/v2/_index.html
+++ b/external/book/content/book/zh/v2/_index.html
@@ -9,6 +9,9 @@ book:
   front_page: true
   repository_url: https://github.com/progit/progit2-zh
   sha: a5267dfdbf4985d6b2bb94b0993007736fa0acbf
+  ebook_pdf: https://github.com/progit/progit2-zh/releases/download/2.1.73/progit.pdf
+  ebook_epub: https://github.com/progit/progit2-zh/releases/download/2.1.73/progit.epub
+  ebook_mobi: https://github.com/progit/progit2-zh/releases/download/2.1.73/progit.mobi
 page_title: Git - Book
 url: "/book/zh/v2.html"
 aliases:
