--- a/external/book/content/book/es/v2/_index.html
+++ b/external/book/content/book/es/v2/_index.html
@@ -9,6 +9,8 @@ book:
   front_page: true
   repository_url: https://github.com/progit/progit2-es
   sha: 2264d131f4f6ca028ff4fe88ca60fc8384ee0c3c
+  ebook_pdf: https://github.com/progit/progit2-es/releases/download/2.1.23/progit.pdf
+  ebook_epub: https://github.com/progit/progit2-es/releases/download/2.1.23/progit.epub
 page_title: Git - Book
 url: "/book/es/v2.html"
 aliases:
