book: update bg
Updated via the `update-book.yml` GitHub workflow.

--- a/external/book/content/book/bg/v2/_index.html
+++ b/external/book/content/book/bg/v2/_index.html
@@ -9,6 +9,9 @@ book:
   front_page: true
   repository_url: https://github.com/progit/progit2-bg
   sha: bad96055d9e17cb562781652a87df1de93ab2c9b
+  ebook_pdf: https://github.com/progit/progit2-bg/releases/download/2.1.60/progit.pdf
+  ebook_epub: https://github.com/progit/progit2-bg/releases/download/2.1.60/progit.epub
+  ebook_mobi: https://github.com/progit/progit2-bg/releases/download/2.1.60/progit.mobi
 page_title: Git - Book
 url: "/book/bg/v2.html"
 aliases:
