book: update az
Updated via the `update-book.yml` GitHub workflow.

--- a/external/book/content/book/az/v2/_index.html
+++ b/external/book/content/book/az/v2/_index.html
@@ -9,6 +9,8 @@ book:
   front_page: true
   repository_url: https://github.com/progit2-aze/progit2
   sha: 9f5e87d19b622e05fd9f7cc215bcd39c79d5995b
+  ebook_pdf: https://github.com/progit2-aze/progit2/releases/download/2.1.167/progit_v2.1.167.pdf
+  ebook_epub: https://github.com/progit2-aze/progit2/releases/download/2.1.167/progit_v2.1.167.epub
 page_title: Git - Book
 url: "/book/az/v2.html"
 aliases:
