book: update ko
Updated via the `update-book.yml` GitHub workflow.

--- a/external/book/content/book/ko/v2/_index.html
+++ b/external/book/content/book/ko/v2/_index.html
@@ -9,6 +9,8 @@ book:
   front_page: true
   repository_url: https://github.com/progit/progit2-ko
   sha: '0099163d19b4124ab13135dee7932b2cea6ec09b'
+  ebook_pdf: https://github.com/progit/progit2-ko/releases/download/2.1.80/progit.pdf
+  ebook_epub: https://github.com/progit/progit2-ko/releases/download/2.1.80/progit.epub
 page_title: Git - Book
 url: "/book/ko/v2.html"
 aliases:
