book: update ja
Updated via the `update-book.yml` GitHub workflow.

--- a/external/book/content/book/ja/v2/_index.html
+++ b/external/book/content/book/ja/v2/_index.html
@@ -9,6 +9,8 @@ book:
   front_page: true
   repository_url: https://github.com/progit/progit2-ja
   sha: bfb44c39ca152442e1186b4e2913134bd9a0b1e7
+  ebook_pdf: https://github.com/progit/progit2-ja/releases/download/2.1.7/progit.pdf
+  ebook_epub: https://github.com/progit/progit2-ja/releases/download/2.1.7/progit.epub
 page_title: Git - Book
 url: "/book/ja/v2.html"
 aliases:
