--- a/external/book/content/book/ru/v2/_index.html
+++ b/external/book/content/book/ru/v2/_index.html
@@ -9,6 +9,8 @@ book:
   front_page: true
   repository_url: https://github.com/progit/progit2-ru
   sha: 79a75ed52f39247873bf2d8ffd7ed08706487755
+  ebook_pdf: https://github.com/progit/progit2-ru/releases/download/2.1.117/progit.pdf
+  ebook_epub: https://github.com/progit/progit2-ru/releases/download/2.1.117/progit.epub
 page_title: Git - Book
 url: "/book/ru/v2.html"
 aliases:
