--- a/external/book/content/book/gr/v2/_index.html
+++ b/external/book/content/book/gr/v2/_index.html
@@ -9,6 +9,9 @@ book:
   front_page: true
   repository_url: https://github.com/progit2-gr/progit2
   sha: bddb5f3e050e3ab66d197eaab033e65a2aa98e03
+  ebook_pdf: https://github.com/progit2-gr/progit2/releases/download/2.1.4/progit_v2.1.4.pdf
+  ebook_epub: https://github.com/progit2-gr/progit2/releases/download/2.1.4/progit_v2.1.4.epub
+  ebook_mobi: https://github.com/progit2-gr/progit2/releases/download/2.1.4/progit_v2.1.4.mobi
 page_title: Git - Book
 url: "/book/gr/v2.html"
 aliases:
