book: update sr
Updated via the `update-book.yml` GitHub workflow.

--- a/external/book/content/book/sr/v2/_index.html
+++ b/external/book/content/book/sr/v2/_index.html
@@ -9,6 +9,8 @@ book:
   front_page: true
   repository_url: https://github.com/progit/progit2-sr
   sha: d3a3670c50e4cd21c2828333f712b6eacaa7e10f
+  ebook_pdf: https://github.com/progit/progit2-sr/releases/download/2.1.3/progit.pdf
+  ebook_epub: https://github.com/progit/progit2-sr/releases/download/2.1.3/progit.epub
 page_title: Git - Book
 url: "/book/sr/v2.html"
 aliases:
