--- a/external/book/content/book/pl/v2/_index.html
+++ b/external/book/content/book/pl/v2/_index.html
@@ -9,6 +9,8 @@ book:
   front_page: true
   repository_url: https://github.com/progit2-pl/progit2-pl
   sha: 3a939c84461d254478a87749d43bed97ada37602
+  ebook_pdf: https://github.com/progit2-pl/progit2-pl/releases/download/2.1.1/progit.pdf
+  ebook_epub: https://github.com/progit2-pl/progit2-pl/releases/download/2.1.1/progit.epub
 page_title: Git - Book
 url: "/book/pl/v2.html"
 aliases:
