book: update be
Updated via the `update-book.yml` GitHub workflow.

--- a/external/book/content/book/be/v2/_index.html
+++ b/external/book/content/book/be/v2/_index.html
@@ -9,6 +9,8 @@ book:
   front_page: true
   repository_url: https://github.com/progit/progit2-be
   sha: 5d7dee94e8f4f56fc28ef927e7435d869cd312ff
+  ebook_pdf: https://github.com/progit/progit2-be/releases/download/2.1.2/progit.pdf
+  ebook_epub: https://github.com/progit/progit2-be/releases/download/2.1.2/progit.epub
 page_title: Git - Book
 url: "/book/be/v2.html"
 aliases:
