book: update uk
Updated via the `update-book.yml` GitHub workflow.

--- a/external/book/content/book/uk/v2/_index.html
+++ b/external/book/content/book/uk/v2/_index.html
@@ -9,6 +9,8 @@ book:
   front_page: true
   repository_url: https://github.com/progit/progit2-uk
   sha: d6bfd53e83b526f3d497983bfb784f4c832b1f9a
+  ebook_pdf: https://github.com/progit/progit2-uk/releases/download/2.1.12/progit.pdf
+  ebook_epub: https://github.com/progit/progit2-uk/releases/download/2.1.12/progit.epub
 page_title: Git - Book
 url: "/book/uk/v2.html"
 aliases:
