--- a/external/book/content/book/fr/v2/_index.html
+++ b/external/book/content/book/fr/v2/_index.html
@@ -9,6 +9,8 @@ book:
   front_page: true
   repository_url: https://github.com/progit/progit2-fr
   sha: be26909d7508e6b2754965e7e5a75d3e44b81dbc
+  ebook_pdf: https://github.com/progit/progit2-fr/releases/download/2.1.77/progit.pdf
+  ebook_epub: https://github.com/progit/progit2-fr/releases/download/2.1.77/progit.epub
 page_title: Git - Book
 url: "/book/fr/v2.html"
 aliases:
