book: update zh-tw
Updated via the `update-book.yml` GitHub workflow.

--- a/external/book/content/book/zh-tw/v2/_index.html
+++ b/external/book/content/book/zh-tw/v2/_index.html
@@ -9,6 +9,9 @@ book:
   front_page: true
   repository_url: https://github.com/progit/progit2-zh-tw
   sha: f0a989f9aaf289c265cf95381b30653a9d04819b
+  ebook_pdf: https://github.com/progit/progit2-zh-tw/releases/download/2.1.0/progit_v2.1.0.pdf
+  ebook_epub: https://github.com/progit/progit2-zh-tw/releases/download/2.1.0/progit_v2.1.0.epub
+  ebook_mobi: https://github.com/progit/progit2-zh-tw/releases/download/2.1.0/progit_v2.1.0.mobi
 page_title: Git - Book
 url: "/book/zh-tw/v2.html"
 aliases:
