book: update sl
Updated via the `update-book.yml` GitHub workflow.

--- a/external/book/content/book/sl/v2/_index.html
+++ b/external/book/content/book/sl/v2/_index.html
@@ -8,7 +8,9 @@ book:
   language_code: sl
   front_page: true
   repository_url: https://github.com/progit/progit2-sl
-  sha: 16dcf83d9eaa6256fd962b6652f30d6b767f40a1
+  sha: '096aaf52e250ec1c5a8e47ea147dc79e797ade70'
+  ebook_pdf: https://github.com/progit/progit2-sl/releases/download/2.1.78/progit.pdf
+  ebook_epub: https://github.com/progit/progit2-sl/releases/download/2.1.78/progit.epub
 page_title: Git - Book
 url: "/book/sl/v2.html"
 aliases:
