book: update de
Updated via the `update-book.yml` GitHub workflow.

--- a/external/book/content/book/de/v2/_index.html
+++ b/external/book/content/book/de/v2/_index.html
@@ -9,6 +9,8 @@ book:
   front_page: true
   repository_url: https://github.com/progit/progit2-de
   sha: c4f0a32f55f41264c4c72aef9800b3bce306486e
+  ebook_pdf: https://github.com/progit/progit2-de/releases/download/2.1.293/progit.pdf
+  ebook_epub: https://github.com/progit/progit2-de/releases/download/2.1.293/progit.epub
 page_title: Git - Book
 url: "/book/de/v2.html"
 aliases:
