--- a/external/book/content/book/nl/v2/_index.html
+++ b/external/book/content/book/nl/v2/_index.html
@@ -8,7 +8,9 @@ book:
   language_code: nl
   front_page: true
   repository_url: https://github.com/progit/progit2-nl
-  sha: a81766ce9c37750b7d13fd6ef9bd5961605d619b
+  sha: a8d19c00fc6ed2da8cd400004638752ab1d9f735
+  ebook_pdf: https://github.com/progit/progit2-nl/releases/download/2.1.117/progit.pdf
+  ebook_epub: https://github.com/progit/progit2-nl/releases/download/2.1.117/progit.epub
 page_title: Git - Book
 url: "/book/nl/v2.html"
 aliases:
