--- a/external/book/content/book/pt-br/v2/_index.html
+++ b/external/book/content/book/pt-br/v2/_index.html
@@ -9,6 +9,8 @@ book:
   front_page: true
   repository_url: https://github.com/progit/progit2-pt-br
   sha: e30df8c08716f41756134ffb39b25e9fb34909ac
+  ebook_pdf: https://github.com/progit/progit2-pt-br/releases/download/2.1.48/progit.pdf
+  ebook_epub: https://github.com/progit/progit2-pt-br/releases/download/2.1.48/progit.epub
 page_title: Git - Book
 url: "/book/pt-br/v2.html"
 aliases:
