--- a/external/book/content/book/ko/v2/_index.html
+++ b/external/book/content/book/ko/v2/_index.html
@@ -8,7 +8,7 @@ book:
   language_code: ko
   front_page: true
   repository_url: https://github.com/progit/progit2-ko
-  sha: '0099163d19b4124ab13135dee7932b2cea6ec09b'
+  sha: f50647da032bf210ef91802290d60d05da1a9416
   ebook_pdf: https://github.com/progit/progit2-ko/releases/download/2.1.80/progit.pdf
   ebook_epub: https://github.com/progit/progit2-ko/releases/download/2.1.80/progit.epub
 page_title: Git - Book
