book: update sl
Updated via the `update-book.yml` GitHub workflow.

--- a/external/book/content/book/sl/v2/_index.html
+++ b/external/book/content/book/sl/v2/_index.html
@@ -8,9 +8,9 @@ book:
   language_code: sl
   front_page: true
   repository_url: https://github.com/progit/progit2-sl
-  sha: '096aaf52e250ec1c5a8e47ea147dc79e797ade70'
-  ebook_pdf: https://github.com/progit/progit2-sl/releases/download/2.1.78/progit.pdf
-  ebook_epub: https://github.com/progit/progit2-sl/releases/download/2.1.78/progit.epub
+  sha: 98bbd36b5367084eb28f43433f7a43fc3691aea2
+  ebook_pdf: https://github.com/progit/progit2-sl/releases/download/2.1.79/progit.pdf
+  ebook_epub: https://github.com/progit/progit2-sl/releases/download/2.1.79/progit.epub
 page_title: Git - Book
 url: "/book/sl/v2.html"
 aliases:
