dark-mode: don't apply color filter on all images
The image on the /about/data-assurance page looked creepy with the color
filter. And because the image isn't bright anyway, remove the filter
from that image.

Signed-off-by: Toon Claes <toon@iotcl.com>

--- a/content/about/data-assurance.html
+++ b/content/about/data-assurance.html
@@ -17,7 +17,7 @@ aliases:
     checksum when checked back out. It's impossible to get anything out of Git
     other than the <strong>exact bits you put in</strong>.
     </p>
-    <img height="522" src="{{< relurl "images/assurance@2x.png" >}}" width="628">
+    <img class="no-filter" height="522" src="{{< relurl "images/assurance@2x.png" >}}" width="628">
     <p>
     It is also impossible to change any file, date, commit message, or any other
     data in a Git repository without changing the IDs of everything after it.
