--- a/external/book/content/book/en/v2/Git-Tools-Debugging-with-Git.html
+++ b/external/book/content/book/en/v2/Git-Tools-Debugging-with-Git.html
@@ -142,7 +142,7 @@ Bisecting: 1 revisions left to test after this
 </div>
 <div class="paragraph">
 <p>This commit is fine, and now Git has all the information it needs to determine where the issue was introduced.
-It tells you the SHA-1 of the first bad commit and show some of the commit information and which files were modified in that commit so you can figure out what happened that may have introduced this bug:</p>
+It tells you the SHA-1 of the first bad commit and shows some of the commit information and which files were modified in that commit so you can figure out what happened that may have introduced this bug:</p>
 </div>
 <div class="listingblock">
 <div class="content">
