book: update en
Updated via the `update-book.yml` GitHub workflow.

--- a/external/book/content/book/en/v2/Getting-Started-First-Time-Git-Setup.html
+++ b/external/book/content/book/en/v2/Getting-Started-First-Time-Git-Setup.html
@@ -78,7 +78,7 @@ $ git config --global user.email johndoe@example.com</code></pre>
 </div>
 </div>
 <div class="paragraph">
-<p>Again, you need to do this only once if you pass the <code>--global</code> option, because then Git will always use that information for anything you do on that system.
+<p>Again, you need to do this only once if you pass the <code>--global</code> option, because then Git will always use that information for your user on that system.
 If you want to override this with a different name or email address for specific projects, you can run the command without the <code>--global</code> option when you’re in that project.</p>
 </div>
 <div class="paragraph">
