book: update de
Updated via the `update-book.yml` GitHub workflow.

--- a/external/book/content/book/de/v2/Git-Interna-Zusammenfassung.html
+++ b/external/book/content/book/de/v2/Git-Interna-Zusammenfassung.html
@@ -11,11 +11,14 @@ book:
     number: 10
   section:
     title: Zusammenfassung
-    number: 8
-    cs_number: '10.8'
-    previous: book/de/v2/Git-Interna-Wartung-und-Datenwiederherstellung
+    number: 9
+    cs_number: '10.9'
+    previous: book/de/v2/Git-Interna-Umgebungsvariablen
     next: book/de/v2/Anhang-A:-Git-in-anderen-Umgebungen-Grafische-Schnittstellen
 title: Git - Zusammenfassung
+aliases:
+- "/book/de/Git-Internas-Zusammenfassung.html"
+- "/book/de/v1/Git-Internas-Zusammenfassung.html"
 ---
 <h2 id="_zusammenfassung_14">Zusammenfassung</h2>
 <div class="paragraph">
