--- a/external/book/content/book/de/v2/Git-Interna-Git-Referenzen.html
+++ b/external/book/content/book/de/v2/Git-Interna-Git-Referenzen.html
@@ -22,7 +22,7 @@ aliases:
 ---
 <h2 id="_git_refs">Git Referenzen</h2>
 <div class="paragraph">
-<p>Wenn du den Verlauf deines Repositorys sehen möchtest, der über Commit erreichbar ist, z. B. <code>1a410e</code>, kannst du so etwas wie <code>git log 1a410e</code> ausführen, um diesen Verlauf anzuzeigen. Dennoch musst du sich weiterhin daran erinnern, dass <code>1a410e</code> der Commit ist den du als Ausgangspunkt für diese Historie verwenden möchtest.
+<p>Wenn du den Verlauf deines Repositorys sehen möchtest, der über Commit erreichbar ist, z. B. <code>1a410e</code>, kannst du so etwas wie <code>git log 1a410e</code> ausführen, um diesen Verlauf anzuzeigen. Dennoch musst du dich weiterhin daran erinnern, dass <code>1a410e</code> der Commit ist den du als Ausgangspunkt für diese Historie verwenden möchtest.
 Es wäre aber einfacher, wenn du eine Datei hättest, in der du diesen SHA-1-Wert unter einem einfachen Namen speichern kannst, sodass du diesen einfachen Namen anstelle des unformatierten SHA-1-Werts verwenden könntest.</p>
 </div>
 <div class="paragraph">
