book: update en
Updated via the `update-book.yml` GitHub workflow.

--- a/external/book/content/book/en/v2/Git-and-Other-Systems-Git-as-a-Client.html
+++ b/external/book/content/book/en/v2/Git-and-Other-Systems-Git-as-a-Client.html
@@ -213,7 +213,7 @@ c3dcbe8488c6240392e8a5d7553bbffcb0f94ef0 refs/remotes/origin/master
 </div>
 </div>
 <div class="paragraph">
-<p>Git fetches the tags directly into <code>refs/tags</code>, rather than treating them remote branches.</p>
+<p>Git fetches the tags directly into <code>refs/tags</code>, rather than treating them as remote branches.</p>
 </div>
 </div>
 <div class="sect4">
