book: update tr
Updated via the `update-book.yml` GitHub workflow.

--- a/external/book/content/book/tr/v2/Git-Temelleri-Bir-Git-Reposu-Oluşturma/Kopyalama.html
+++ b/external/book/content/book/tr/v2/Git-Temelleri-Bir-Git-Reposu-Oluşturma/Kopyalama.html
@@ -51,7 +51,7 @@ Veya</p>
 <div class="sect3">
 <h3 id="_varolan_bir_dizinde_repo_başlatma">Varolan Bir Dizinde Repo Başlatma</h3>
 <div class="paragraph">
-<p>Eğer şu anda sürüm denetimi altında olmayan bir proje diziniz varsa ve onu Git ile takip etmeye etmeye başlamak istiyorsanız, önce o projenin dizinine gitmeniz gerekmektedir.
+<p>Eğer şu anda sürüm denetimi altında olmayan bir proje diziniz varsa ve onu Git ile takip etmeye başlamak istiyorsanız, önce o projenin dizinine gitmeniz gerekmektedir.
 Eğer bunu daha önce yapmadıysanız, hangi işletim sisteminde çalıştığınıza bağlı olarak proje dizininiz farklı görünebilir.</p>
 </div>
 <div class="paragraph">
