Windows: Stop referring to 32-bit/64-bit, refer to x64/ARM64 instead
As of v2.47.1, Git for Windows provides an ARM64 version, and as of
v2.49.0 it stopped providing an i686 version.

The preceding commit updated the information in `hugo.yml` to reflect
this, and now it is time to use that information to present the download
links accordingly.

Signed-off-by: Johannes Schindelin <johannes.schindelin@gmx.de>

--- a/content/downloads/win.html
+++ b/content/downloads/win.html
@@ -8,26 +8,26 @@ aliases:
 <div id="main">
   <h1>Download for Windows</h1>
   <p>
-  <strong><a id="auto-download-link" href="{{< site-param windows_installer.installer64.url >}}">Click here to download </a></strong>
-    the latest (<strong id="auto-download-version">{{< site-param windows_installer.installer64.version >}}</strong>)
-    <strong id="auto-download-bitness">64-bit</strong> version of <strong>Git for Windows</strong>.
+  <strong><a id="auto-download-link" href="{{< site-param windows_installer.installer_x64.url >}}">Click here to download </a></strong>
+    the latest (<strong id="auto-download-version">{{< site-param windows_installer.installer_x64.version >}}</strong>)
+    <strong id="auto-download-architecture">x64</strong> version of <strong>Git for Windows</strong>.
     This is the most recent <a href="https://git-for-windows.github.io/">maintained build</a>.
-    It was released <span id="relative-release-date"></span>on <span id="auto-download-date">{{< site-param windows_installer.installer64.release_date >}}</span>.
+    It was released <span id="relative-release-date"></span>on <span id="auto-download-date">{{< site-param windows_installer.installer_x64.release_date >}}</span>.
   </p>
   <h3>Other Git for Windows downloads</h3>
   <h4>Standalone Installer</h4>
   <p>
-  <strong><a href="{{< site-param windows_installer.installer32.url >}}">32-bit Git for Windows Setup</a>.</strong>
+    <strong><a href="{{< site-param windows_installer.installer_x64.url >}}">Git for Windows/x64 Setup</a>.</strong>
   </p>
   <p>
-    <strong><a href="{{< site-param windows_installer.installer64.url >}}">64-bit Git for Windows Setup</a>.</strong>
+    <strong><a href="{{< site-param windows_installer.installer_arm64.url >}}">Git for Windows/ARM64 Setup</a>.</strong>
   </p>
   <h4>Portable ("thumbdrive edition")</h4>
   <p>
-    <strong><a href="{{< site-param windows_installer.portable32.url >}}">32-bit Git for Windows Portable</a>.</strong>
+    <strong><a href="{{< site-param windows_installer.portable_x64.url >}}">Git for Windows/x64 Portable</a>.</strong>
   </p>
   <p>
-    <strong><a href="{{< site-param windows_installer.portable64.url >}}">64-bit Git for Windows Portable</a>.</strong>
+    <strong><a href="{{< site-param windows_installer.portable_arm64.url >}}">Git for Windows/ARM64 Portable</a>.</strong>
   </p>
   <h4>Using winget tool</h4>
   <p>
