book: update fr
Updated via the `update-book.yml` GitHub workflow.

--- a/external/book/content/book/fr/v2/Annexe-A:-Git-dans-d’autres-environnements-Interfaces-graphiques.html
+++ b/external/book/content/book/fr/v2/Annexe-A:-Git-dans-d’autres-environnements-Interfaces-graphiques.html
@@ -64,9 +64,9 @@ L’interface de Gitk ressemble à ceci :</p>
 </div>
 <div class="imageblock">
 <div class="content">
-<img src="{{< relurl "book/fr/v2/images/gitk.png" >}}" alt="Le visualisateur d’historique `gitk`.">
+<img src="{{< relurl "book/fr/v2/images/gitk.png" >}}" alt="Le visualiseur d’historique `gitk`.">
 </div>
-<div class="title">Figure 151. Le visualisateur d’historique <code>gitk</code>.</div>
+<div class="title">Figure 151. Le visualiseur d’historique <code>gitk</code>.</div>
 </div>
 <div class="paragraph">
 <p>Dans la partie supérieure, une zone ressemble à la sortie de <code>git log --graph</code>.
