--- a/external/book/content/book/fr/v2/Annexe-B:-Embarquer-Git-dans-vos-applications-Dulwich.html
+++ b/external/book/content/book/fr/v2/Annexe-B:-Embarquer-Git-dans-vos-applications-Dulwich.html
@@ -22,7 +22,7 @@ url: "/book/fr/v2/Annexe-B:-Embarquer-Git-dans-vos-applications-Dulwich.html"
 <div class="paragraph">
 <p>
 Il existe aussi une implantation Git en Python pur - Dulwich.
-Le projet est hébergé sous <a href="https://www.dulwich.io/" class="bare">https://www.dulwich.io/</a>.
+Le projet est hébergé sous <a href="https://github.com/jelmer/dulwich" class="bare">https://github.com/jelmer/dulwich</a>.
 Il vise à fournir une interface vers les dépôts Git (locaux et distant) qui n’appelle pas git directement mais n’utilise purement que Python.
 Il dispose d’extensions C optionnelles cependant, qui améliorent significativement les performances.</p>
 </div>
@@ -65,10 +65,10 @@ porcelain.log('.', max_entries=1)
 <div class="ulist">
 <ul>
 <li>
-<p>La documentation officielle de l’API est disponible sur <a href="https://www.dulwich.io/docs/api/" class="bare">https://www.dulwich.io/docs/api/</a></p>
+<p>La documentation officielle de l’API est disponible sur https://www.dulwich.io/docs/api/[]</p>
 </li>
 <li>
-<p>Le tutoriel officiel  <a href="https://www.dulwich.io/docs/tutorial" class="bare">https://www.dulwich.io/docs/tutorial</a> contient de nombreux exemples de tâches spécifiques réalisées avec Dulwich.</p>
+<p>Le tutoriel officiel https://www.dulwich.io/docs/tutorial[] contient de nombreux exemples de tâches spécifiques réalisées avec Dulwich.</p>
 </li>
 </ul>
 </div>
