--- a/external/book/content/book/fr/v2/Commandes-Git-Installation-et-configuration.html
+++ b/external/book/content/book/fr/v2/Commandes-Git-Installation-et-configuration.html
@@ -71,7 +71,7 @@ Il y a plusieurs fichiers que cette commande lira et dans lesquels elle écrira 
 </colgroup>
 <thead>
 <tr>
-<th class="tableblock halign-left valign-top">Editeur</th>
+<th class="tableblock halign-left valign-top">Éditeur</th>
 <th class="tableblock halign-left valign-top">Commande de configuration</th>
 </tr>
 </thead>
