--- a/external/book/content/book/fr/v2/Démarrage-rapide-Paramétrage-à-la-première-utilisation-de-Git.html
+++ b/external/book/content/book/fr/v2/Démarrage-rapide-Paramétrage-à-la-première-utilisation-de-Git.html
@@ -36,7 +36,7 @@ Ces variables peuvent être stockées dans trois endroits différents :</p>
 <li>
 <p><code>[chemin]/etc/gitconfig</code> : Contient les valeurs pour tous les utilisateurs et tous les dépôts du système.
 Si vous passez l’option <code>--system</code> à <code>git config</code>, il lit et écrit ce fichier spécifiquement.
-Parce que c’est un fichier de configuration au niveau système, vous aurez besoin de privilèges admnistrateur ou super-utilisateur pour le modifier.</p>
+Parce que c’est un fichier de configuration au niveau système, vous aurez besoin de privilèges administrateur ou super-utilisateur pour le modifier.</p>
 </li>
 <li>
 <p>Fichier <code>~/.gitconfig</code> : Spécifique à votre utilisateur.
