--- a/external/book/content/book/fr/v2/Git-sur-le-serveur-Démon-Daemon-Git.html
+++ b/external/book/content/book/fr/v2/Git-sur-le-serveur-Démon-Daemon-Git.html
@@ -49,7 +49,7 @@ Si vous utilisez un pare-feu, il sera nécessaire de rediriger le port 9418 sur 
 <p>Transformer ce processus en <em>daemon</em> peut s’effectuer de différentes manières qui dépendent du système d’exploitation sur lequel il est lancé.</p>
 </div>
 <div class="paragraph">
-<p>Puisque <code>systemd</code> est le système d’init le plus habitituel sur les distributions Linux modernes, vous pouvez l’utiliser pour cela.
+<p>Puisque <code>systemd</code> est le système d’init le plus habituel sur les distributions Linux modernes, vous pouvez l’utiliser pour cela.
 Placez simplement un fichier <code>/etc/systemd/system/git-daemon.service</code> avec le contenu suivant :</p>
 </div>
 <div class="listingblock">
