--- a/external/book/content/book/fr/v2/Git-sur-le-serveur-Génération-des-clés-publiques-SSH.html
+++ b/external/book/content/book/fr/v2/Git-sur-le-serveur-Génération-des-clés-publiques-SSH.html
@@ -40,7 +40,7 @@ config            id_dsa.pub</code></pre>
 </div>
 </div>
 <div class="paragraph">
-<p>Recherchez une paire de fichiers appelés <em>quelquechose</em> et <em>quelquechose</em>`.pub` où le <em>quelquechose</em> en question est généralement <code>id_dsa</code> ou <code>id_rsa</code>.
+<p>Recherchez une paire de fichiers appelés <em>quelque_chose</em> et <em>quelque_chose</em>`.pub` où le <em>quelque_chose</em> en question est généralement <code>id_dsa</code> ou <code>id_rsa</code>.
 Le fichier en <code>.pub</code> est la clé publique tandis que l’autre est la clé privée.
 Si vous ne voyez pas ces fichiers (ou n’avez même pas de répertoire <code>.ssh</code>), vous pouvez les créer en lançant un programme appelé <code>ssh-keygen</code> fourni par le paquet SSH sur les systèmes Linux/macOS et MSysGit pour Windows :</p>
 </div>
