--- a/external/book/content/book/fr/v2/GitHub-Écriture-de-scripts-pour-GitHub.html
+++ b/external/book/content/book/fr/v2/GitHub-Écriture-de-scripts-pour-GitHub.html
@@ -152,7 +152,7 @@ Ceci rend incroyablement facile de tester et débugger vos crochets.</p>
 <p>L’autre fonctionnalité intéressante est que vous pouvez redéclencher la livraison de n’importe quel message pour tester votre service.</p>
 </div>
 <div class="paragraph">
-<p>Pour plus d’information sur l’écriture de crochets web et tous les différents types d’événement que vous pouvez écouter, rendez-vous à la documentation du Developpeur GitHub à l’adresse <a href="https://docs.github.com/en/developers/webhooks-and-events/webhooks/about-webhooks" class="bare">https://docs.github.com/en/developers/webhooks-and-events/webhooks/about-webhooks</a>.</p>
+<p>Pour plus d’information sur l’écriture de crochets web et tous les différents types d’événement que vous pouvez écouter, rendez-vous à la documentation du Développeur GitHub à l’adresse <a href="https://docs.github.com/en/developers/webhooks-and-events/webhooks/about-webhooks" class="bare">https://docs.github.com/en/developers/webhooks-and-events/webhooks/about-webhooks</a>.</p>
 </div>
 </div>
 </div>
