--- a/external/book/content/book/fr/v2/Les-bases-de-Git-Démarrer-un-dépôt-Git.html
+++ b/external/book/content/book/fr/v2/Les-bases-de-Git-Démarrer-un-dépôt-Git.html
@@ -34,7 +34,7 @@ Nous vous montrerons aussi comment paramétrer Git pour qu’il ignore certains 
 <div class="olist arabic">
 <ol class="arabic">
 <li>
-<p>Vous pouvez prendre un répertoire existant et le transformer en dépot Git.</p>
+<p>Vous pouvez prendre un répertoire existant et le transformer en dépôt Git.</p>
 </li>
 <li>
 <p>Vous pouvez <em>cloner</em> un dépôt Git existant sur un autre serveur.</p>
