--- a/external/book/content/book/fr/v2/Les-bases-de-Git-Les-alias-Git.html
+++ b/external/book/content/book/fr/v2/Les-bases-de-Git-Les-alias-Git.html
@@ -24,7 +24,7 @@ aliases:
 <div class="paragraph">
 <p>
 Avant de clore ce chapitre sur les bases de Git, il reste une astuce qui peut rendre votre apprentissage de Git plus simple, facile ou familier : les alias.
-Nous n’y ferons pas référence ni ne les considèrerons utilisés dans la suite du livre, mais c’est un moyen de facilité qui mérite d’être connu.</p>
+Nous n’y ferons pas référence ni ne les considérerons utilisés dans la suite du livre, mais c’est un moyen de facilité qui mérite d’être connu.</p>
 </div>
 <div class="paragraph">
 <p>Git ne complète pas votre commande si vous ne la tapez que partiellement.
