--- a/external/book/content/book/fr/v2/Les-branches-avec-Git-Gestion-des-branches.html
+++ b/external/book/content/book/fr/v2/Les-branches-avec-Git-Gestion-des-branches.html
@@ -23,7 +23,7 @@ aliases:
 <h2 id="s_branch_management">Gestion des branches</h2>
 <div class="paragraph">
 <p>
-Maintenant que vous avez créé, fusionné et supprimé des branches, regardons de plus près les outils de gestion des branches qui s’avèreront utiles lors d’une utilisation intensive des branches.</p>
+Maintenant que vous avez créé, fusionné et supprimé des branches, regardons de plus près les outils de gestion des branches qui se révéleront utiles lors d’une utilisation intensive des branches.</p>
 </div>
 <div class="paragraph">
 <p>La commande <code>git branch</code> permet en fait bien plus que la simple création et suppression de branches.
