--- a/external/book/content/book/fr/v2/Les-branches-avec-Git-Rebaser-Rebasing.html
+++ b/external/book/content/book/fr/v2/Les-branches-avec-Git-Rebaser-Rebasing.html
@@ -43,9 +43,9 @@ Cette commande réalise une <em>fusion à trois branches</em> entre les deux der
 </div>
 <div class="imageblock">
 <div class="content">
-<img src="{{< relurl "book/fr/v2/images/basic-rebase-2.png" >}}" alt="Fusion pour intégrer des travaux aux historiques divergeants">
+<img src="{{< relurl "book/fr/v2/images/basic-rebase-2.png" >}}" alt="Fusion pour intégrer des travaux aux historiques divergeant">
 </div>
-<div class="title">Figure 36. Fusion pour intégrer des travaux aux historiques divergeants</div>
+<div class="title">Figure 36. Fusion pour intégrer des travaux aux historiques divergeant</div>
 </div>
 <div class="paragraph">
 <p>Cependant, il existe un autre moyen : vous pouvez prendre le <em>patch</em> de la modification introduite en <code>C4</code> et le réappliquer sur <code>C3</code>.
