--- a/external/book/content/book/fr/v2/Les-tripes-de-Git-Fichiers-groupés.html
+++ b/external/book/content/book/fr/v2/Les-tripes-de-Git-Fichiers-groupés.html
@@ -201,8 +201,8 @@ Ce qui est aussi intéressant est que la seconde version du fichier est celle qu
 La raison en est que vous aurez sans doute besoin d’accéder rapidement aux versions les plus récentes du fichier.</p>
 </div>
 <div class="paragraph">
-<p>Une chose intéressante à propos de ceci est que l’on peut recompacter à tout moment.
-Git recompacte votre base de donnée occasionnellement, en essayant d’économiser de la place.
-Vous pouvez aussi recompacter à la main, en exécutant la commande <code>git gc</code> vous-même.</p>
+<p>Une chose intéressante à propos de ceci est que l’on peut recompresser à tout moment.
+Git recompresse votre base de donnée occasionnellement, en essayant d’économiser de la place.
+Vous pouvez aussi recompresser à la main, en exécutant la commande <code>git gc</code> vous-même.</p>
 </div>
 <div id="nav"><a href="{{< previous-section >}}">prev</a> | <a href="{{< next-section >}}">next</a></div>
