--- a/external/book/content/book/fr/v2/Utilitaires-Git-Déboguer-avec-Git.html
+++ b/external/book/content/book/fr/v2/Utilitaires-Git-Déboguer-avec-Git.html
@@ -122,7 +122,7 @@ Bisecting: 6 revisions left to test after this
 <p>Git trouve qu’il y a environ 12 <em>commits</em> entre celui que vous avez marqué comme le dernier bon connu (v1.0) et la version courante qui n’est pas bonne, et il a récupéré le <em>commit</em> du milieu à votre place.
 À ce moment, vous pouvez dérouler vos tests pour voir si le bogue existait dans ce <em>commit</em>.
 Si c’est le cas, il a été introduit quelque part avant ce <em>commit</em> médian, sinon, il l’a été évidemment après.
-Il apparait que le bogue ne se reproduit pas ici, vous le dites à Git en tapant <code>git bisect good</code> et continuez votre périple :</p>
+Il apparaît que le bogue ne se reproduit pas ici, vous le dites à Git en tapant <code>git bisect good</code> et continuez votre périple :</p>
 </div>
 <div class="listingblock">
 <div class="content">
