--- a/external/book/content/book/fr/v2/Utilitaires-Git-Remisage-et-nettoyage.html
+++ b/external/book/content/book/fr/v2/Utilitaires-Git-Remisage-et-nettoyage.html
@@ -40,7 +40,7 @@ La réponse à cette problématique est la commande <code>git stash</code>.</p>
 </div>
 <div class="paragraph">
 <p>Courant fin octobre 2017, il y a eu de longues discussions sur la liste de diffusion Git, pour rendre obsolète la commande <code>git stash save</code> au profit de l’alternative existante <code>git stash push</code>.
-La raison principale en est que <code>git stash push</code> introduit une option pour remiser des <em>specificateurs de chemin</em> sélectionnés, ce que <code>git stash save</code> ne sait pas faire.</p>
+La raison principale en est que <code>git stash push</code> introduit une option pour remiser des <em>spécificateurs de chemin</em> sélectionnés, ce que <code>git stash save</code> ne sait pas faire.</p>
 </div>
 <div class="paragraph">
 <p><code>git stash save</code> ne va disparaître immédiatement, donc ne vous inquiétez pas.
