--- a/external/book/content/book/fr/v2/Utilitaires-Git-Stockage-des-identifiants.html
+++ b/external/book/content/book/fr/v2/Utilitaires-Git-Stockage-des-identifiants.html
@@ -90,7 +90,7 @@ Voici à quoi ressemblerait un <code>.gitconfig</code> si vous utilisiez un fich
 <h3 id="_sous_le_capot">Sous le capot</h3>
 <div class="paragraph">
 <p>Comment tout ceci fonctionne-t-il ?
-La commande d’origine de Git pour le système d’assistants d’indentification est <code>git credential</code>, qui accepte une commande comme argument, puis d’autres informations via stdin.</p>
+La commande d’origine de Git pour le système d’assistants d’identification est <code>git credential</code>, qui accepte une commande comme argument, puis d’autres informations via stdin.</p>
 </div>
 <div class="paragraph">
 <p>Un exemple peut aider à mieux comprendre cela.
