--- a/external/book/content/book/fr/v2/Utilitaires-Git-Sélection-des-versions.html
+++ b/external/book/content/book/fr/v2/Utilitaires-Git-Sélection-des-versions.html
@@ -81,7 +81,7 @@ $ git show 1c002d</code></pre>
 </div>
 </div>
 <div class="paragraph">
-<p>Git peut déterminer une référence SHA-1 tout à la fois la plus courte possible et non ambigüe.
+<p>Git peut déterminer une référence SHA-1 tout à la fois la plus courte possible et non ambiguë.
 Ajoutez l’option <code>--abbrev-commit</code> à la commande <code>git log</code> et le résultat affiché utilisera des valeurs plus courtes mais uniques ; par défaut Git retiendra 7 caractères et augmentera au besoin :</p>
 </div>
 <div class="listingblock">
@@ -125,7 +125,7 @@ Si tous les 6,5 milliards d’humains sur Terre programmaient et que chaque seco
 Ainsi, une collision organique de SHA-1 est moins probable que tous les membres de votre équipe de programmeurs soient attaqués et tués par des loups dans des incidents sans relation la même nuit.</p>
 </div>
 <div class="paragraph">
-<p>Si vous y dédiiez plusieurs milliers de dollars de puissance de calcul, il searit possible de synthétiser deux fichiers avec la même empreinte, comme prouvé par <a href="https://shattered.io/" class="bare">https://shattered.io/</a> en février 2017.
+<p>Si vous y dédiiez plusieurs milliers de dollars de puissance de calcul, il serait possible de synthétiser deux fichiers avec la même empreinte, comme prouvé par <a href="https://shattered.io/" class="bare">https://shattered.io/</a> en février 2017.
 Git évolue vers l’utilisation de SHA256 comme algorithme par défaut d’empreinte, qui est beaucoup plus résilient aux attaques par collision, et a déjà du code en place pour amenuiser cette attaque (bien qu’il ne puisse pas totalement éliminer cette faiblesse)</p>
 </div>
 </td>
@@ -463,7 +463,7 @@ $ git log refA refB --not refC</code></pre>
 </div>
 </div>
 <div class="paragraph">
-<p>Ceci vous fournit un système de requêtage des révisions très puissant, pour vous aider à saisir ce qui se trouve sur vos branches.</p>
+<p>Ceci vous fournit un système de requête des révisions très puissant, pour vous aider à saisir ce qui se trouve sur vos branches.</p>
 </div>
 </div>
 <div class="sect4">
