--- a/external/book/content/book/fr/v2/Annexe-A:-Git-dans-d’autres-environnements-Git-dans-IntelliJ-/-PyCharm-/-WebStorm-/-PhpStorm-/-RubyMine.html
+++ b/external/book/content/book/fr/v2/Annexe-A:-Git-dans-d’autres-environnements-Git-dans-IntelliJ-/-PyCharm-/-WebStorm-/-PhpStorm-/-RubyMine.html
@@ -20,7 +20,7 @@ url: "/book/fr/v2/Annexe-A:-Git-dans-d’autres-environnements-Git-dans-IntelliJ
 ---
 <h2 id="_git_dans_intellij_pycharm_webstorm_phpstorm_rubymine">Git dans IntelliJ / PyCharm / WebStorm / PhpStorm / RubyMine</h2>
 <div class="paragraph">
-<p>Les EDI (environnements de développement intégrés) de JetBrains (tels que IntelliJ IDEA, PyCharm, WebStorm, PhpStorm, RubyMine, et autres) sont livrés avec un greffont d’integration Git.
+<p>Les EDI (environnements de développement intégrés) de JetBrains (tels que IntelliJ IDEA, PyCharm, WebStorm, PhpStorm, RubyMine, et autres) sont livrés avec un greffon d’integration Git.
 Celui-ci fournit une vue dédiée dans l’EDI pour travailler avec Git et les requêtes de tirage GitHub.</p>
 </div>
 <div class="imageblock">
@@ -30,7 +30,7 @@ Celui-ci fournit une vue dédiée dans l’EDI pour travailler avec Git et les r
 <div class="title">Figure 159. Cadre de gestion de version dans les EDI JetBrains</div>
 </div>
 <div class="paragraph">
-<p>L’intrégration repose sur le client git en ligne de commande et nécessite qu’un client soit installé.
+<p>L’intégration repose sur le client git en ligne de commande et nécessite qu’un client soit installé.
 La documentation officielle se trouve sur <a href="https://www.jetbrains.com/help/idea/using-git-integration.html" class="bare">https://www.jetbrains.com/help/idea/using-git-integration.html</a>.</p>
 </div>
 <div id="nav"><a href="{{< previous-section >}}">prev</a> | <a href="{{< next-section >}}">next</a></div>
