--- a/external/book/content/book/fr/v2/Les-bases-de-Git-Enregistrer-des-modifications-dans-le-dépôt.html
+++ b/external/book/content/book/fr/v2/Les-bases-de-Git-Enregistrer-des-modifications-dans-le-dépôt.html
@@ -29,7 +29,7 @@ Vous devez faire quelques modifications et valider des instantanés de ces modif
 <div class="paragraph">
 <p>Souvenez-vous que chaque fichier de votre copie de travail peut avoir deux états : sous suivi de version ou non suivi.
 Les fichiers suivis sont les fichiers qui appartenaient déjà au dernier instantané ; ils peuvent être inchangés, modifiés ou indexés.
-En résumé, les fichiers suivis sont ceux que Git connait.</p>
+En résumé, les fichiers suivis sont ceux que Git connaît.</p>
 </div>
 <div class="paragraph">
 <p>Tous les autres fichiers sont non suivis — tout fichier de votre copie de travail qui n’appartenait pas à votre dernier instantané et n’a pas été indexé.
@@ -265,7 +265,7 @@ Renseigner un fichier <code>.gitignore</code> avant de commencer à travailler e
 <p>les lignes vides ou commençant par <code>#</code> sont ignorées ;</p>
 </li>
 <li>
-<p>les patrons standards de fichiers sont utilisables et seront appliqués recursivement dans tout l’arbre de travail ;</p>
+<p>les patrons standards de fichiers sont utilisables et seront appliqués récursivement dans tout l’arbre de travail ;</p>
 </li>
 <li>
 <p>si le patron commence par une barre oblique (`/), le patron n’est pas récursif ;</p>
