--- a/external/book/content/book/fr/v2/Les-tripes-de-Git-Les-objets-de-Git.html
+++ b/external/book/content/book/fr/v2/Les-tripes-de-Git-Les-objets-de-Git.html
@@ -329,9 +329,9 @@ fdf4fc3344e67ab068f836878b6c4951e3b15f3d</code></pre>
 </td>
 <td class="content">
 <div class="paragraph">
-<p>Vous obtiendrez une valeur de hashage différente à cause d’un moment de création et d’une information d’auteur différents.
+<p>Vous obtiendrez une valeur de hash différente à cause d’un moment de création et d’une information d’auteur différents.
 De plus, bien qu’en principe tout objet commit peut être reproduit précisément en lui fournissant la même donnée, les détails historiques de la construction de ce livre signifient que les empreintes de commit affichées peuvent ne pas correspondre aux commits donnés.
-Remplacez les valeurs de hashage de <em>commit</em> et d’étiquette par vos propres valeurs de somme de contrôle dans la suite de ce chapitre.</p>
+Remplacez les valeurs de hash de <em>commit</em> et d’étiquette par vos propres valeurs de somme de contrôle dans la suite de ce chapitre.</p>
 </div>
 </td>
 </tr>
