--- a/external/book/content/book/fr/v2/Utilitaires-Git-Rerere.html
+++ b/external/book/content/book/fr/v2/Utilitaires-Git-Rerere.html
@@ -19,11 +19,11 @@ title: Git - Rerere
 ---
 <h2 id="s_sect_rerere">Rerere</h2>
 <div class="paragraph">
-<p>La fonctionalité <code>git rerere</code> est une fonction un peu cachée.
+<p>La fonctionnalité <code>git rerere</code> est une fonction un peu cachée.
 Le nom vient de l’anglais <em>reuse recorded resolution</em> (« <em>ré</em> utiliser les <em>ré</em> solutions en <em>re</em> gistrées ») et comme son nom l’indique, cela permet de demander à Git de se souvenir comment vous avez résolu un conflit sur une section de diff de manière que la prochaine fois qu’il rencontre le même conflit, il le résolve automatiquement pour vous.</p>
 </div>
 <div class="paragraph">
-<p>Il existe pas mal de scénarios pour lesquels cette fonctionalité peut se montrer efficace.
+<p>Il existe pas mal de scénarios pour lesquels cette fonctionnalité peut se montrer efficace.
 Un exemple mentionné dans la documentation cite le cas d’une branche au long cours qui finira par fusionner proprement mais ne souhaite pas montrer des fusions intermédiaires.
 Avec <code>rerere</code> activé, vous pouvez fusionner de temps en temps, résoudre les conflits, puis sauvegarder la fusion.
 Si vous faites ceci en continu, alors la dernière fusion devrait être assez facile parce que <code>rerere</code> peut quasiment tout faire automatiquement pour vous.</p>
