--- a/external/book/content/book/zh/v2/GitHub-对项目做出贡献.html
+++ b/external/book/content/book/zh/v2/GitHub-对项目做出贡献.html
@@ -221,7 +221,7 @@ To https://github.com/tonychacon/blink
 <div class="title">Figure 92. 拉取请求创建页面</div>
 </div>
 <div class="paragraph">
-<p>当你单击了“Create pull request”（创建拉取请求）的按钮后，这个项目的拥有者将会收到一条包含关改动和拉取请求页面的链接的提醒。</p>
+<p>当你单击了“Create pull request”（创建拉取请求）的按钮后，这个项目的拥有者将会收到一条包含改动和拉取请求页面的链接的提醒。</p>
 </div>
 <div class="admonitionblock note">
 <table>
